Fixed header logo styles on mobile. Added first draft of the SOLID Principles post

--- a/src/components/Hero/styles.module.css
+++ b/src/components/Hero/styles.module.css
@@ -15,6 +15,11 @@
     transition-duration: 0.3s;
 }
 
+.logo:hover {
+    width: 160px;
+    height: 120px;
+}
+
 @media only screen and (min-width: 720px) {
     .heroContainer {
         height: 250px;
@@ -25,9 +30,11 @@
         width: 200px;
         height: 150px;
     }
+
+    .logo:hover {
+        width: 250px;
+        height: 190px;
+    }
 }
 
-.logo:hover {
-    width: 250px;
-    height: 190px;
-}
+
